--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -1,4 +1,4 @@
-@import "../../node_modules/uikit/src/less/uikit";
+@import "~uikit/src/less/uikit";
 
 @import "./mixins/buttons";
 @import "./mixins/typography";
